# skygl

./: .gitignore  CMakeLists.txt  README.md
shaders/: clouds_pass.frag  compose.frag  noise.glsl  ray.vert  sky_pass.frag  utility.glsl
shaders/atmosphere/: atmosphere.glsl  clear_2d_cs.glsl  clear_3d_cs.glsl  compute_direct_irradiance_cs.glsl  compute_indirect_irradiance_cs.glsl  compute_multiple_scattering_cs.glsl  compute_scattering_density_cs.glsl  compute_single_scattering_cs.glsl  compute_transmittance_cs.glsl  constants.glsl  irradiance_functions.glsl  rendering_functions.glsl  scattering_functions.glsl  transmittance_functions.glsl  uniforms.glsl  utility.glsl
shaders/clouds/: base_noise.comp  detail_noise.comp
src/: Camera.hpp  Input.cpp  Input.hpp  Utils.cpp  Utils.hpp  main.cpp
src/Gl/: GlUtils.cpp  GlUtils.hpp  Keys.h  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  UniformBuffer.cpp  UniformBuffer.hpp
src/Sky/: Constants.hpp  Sun.hpp
src/Sky/Atmosphere/: AtmosphereModel.cpp  AtmosphereModel.hpp  TextureBuffer.cpp  TextureBuffer.hpp
src/Sky/Clouds/: CloudsModel.cpp  CloudsModel.hpp
